// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentMenuItem does not have LaunchLink if no url provided 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ContentMenuItem
    name="Pinkie Pie"
    onInsert={[MockFunction]}
    type="pony"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "dense": true,
      "label": <div
        className="menuItem"
      >
        <div
          className="label"
        >
          <pure(NotInterestedIcon)
            style={
              Object {
                "fill": "#6e7a8a",
                "margin": "6px",
              }
            }
          />
          <span>
            Pinkie Pie
          </span>
        </div>
        <InsertButton />
      </div>,
      "onClick": [MockFunction],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "dense": true,
        "label": <div
          className="menuItem"
        >
          <div
            className="label"
          >
            <pure(NotInterestedIcon)
              style={
                Object {
                  "fill": "#6e7a8a",
                  "margin": "6px",
                }
              }
            />
            <span>
              Pinkie Pie
            </span>
          </div>
          <InsertButton />
        </div>,
        "onClick": [MockFunction],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`ContentMenuItem has a LaunchLink when url is provided 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ContentMenuItem
    name="Pinkie Pie"
    onInsert={[MockFunction]}
    type="pony"
    url="http://ponies-r-us.com"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "dense": true,
      "label": <div
        className="menuItem"
      >
        <div
          className="label"
        >
          <pure(NotInterestedIcon)
            style={
              Object {
                "fill": "#6e7a8a",
                "margin": "6px",
              }
            }
          />
          <span>
            Pinkie Pie
          </span>
          <LaunchLink
            url="http://ponies-r-us.com"
          />
        </div>
        <InsertButton />
      </div>,
      "onClick": [MockFunction],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "dense": true,
        "label": <div
          className="menuItem"
        >
          <div
            className="label"
          >
            <pure(NotInterestedIcon)
              style={
                Object {
                  "fill": "#6e7a8a",
                  "margin": "6px",
                }
              }
            />
            <span>
              Pinkie Pie
            </span>
            <LaunchLink
              url="http://ponies-r-us.com"
            />
          </div>
          <InsertButton />
        </div>,
        "onClick": [MockFunction],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;
